# PBRE

./: .README.md.swp  .gitignore  CMakeLists.txt  Makefile  README.md
include/base/: geometry.h  intersect_detail.h  ray.h  render_obj.h
include/camera/: camera.h  pinhole.h  viewplane.h
include/sampler/: multiclass_disk.h  poisson_disk.h  random.h  sample.h  sampler.h
include/shape/: mesh.h  plane.h  polygon.h  shape.h  triangle.h
include/util/: color_converse.h  file_helper.h  geometry.h  intersect_detail.h  math_func.h  ray.h  transform.h  triangulate.h
src/: main.cpp
src/base/: geometry.cpp  render_obj.cpp
src/camera/: camera.h  pinhole.cpp  pinhole.h  sample.h  sampler.h  viewplane.cpp  viewplane.h
src/sampler/: disk_sampler.cpp  disk_sampler.h  multi_class_disk.cpp  multi_class_disk.h  multi_class_disk_sampler.cpp  multi_class_disk_sampler.h  multiclass_disk.cpp  poisson_disk.cpp  random.cpp  random_sampler.cpp  random_sampler.h  sample.h  sampler.h
src/shape/: main.cpp  plane.cpp  plane.h  polygon.cpp  polygon.h  shape.h
src/shape/mesh/: mesh.cpp  mesh.h  triangle.cpp  triangle.h
src/util/: color_converse.cpp  color_converse.h  file_helper.cpp  file_helper.h  geometry.cpp  geometry.h  intersect_detail.h  math_func.h  png_writer.cpp  ray.h  transform.cpp  transform.h
src/util/file_util/: file_helper.cpp  file_helper.h  file_util.h  png_writer.cpp  zlib_compress.cpp
