# CMake version check
CMAKE_MINIMUM_REQUIRED(VERSION 3.6)
# project name
PROJECT(PBR_engine)
# Enable C++11 support
SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_CXX_STANDARD_REQUIRED on)
ADD_COMPILE_OPTIONS(-Wall)
ADD_COMPILE_OPTIONS(-Wfloat-equal)
ADD_COMPILE_OPTIONS(-Weffc++)
#Variable
set(MAIN_LIB main_lib)
set(MAIN_BIN engine)

# head file path
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_LIST_DIR}/include)
INCLUDE_DIRECTORIES(/usr/local/include)
# source directory
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_LIST_DIR}/src/shape DIR_SRC)
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_LIST_DIR}/src/shape/mesh DIR_SRC)
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_LIST_DIR}/src/util DIR_SRC)
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_LIST_DIR}/src/util/file_util DIR_SRC)
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_LIST_DIR}/src/camera DIR_SRC)
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_LIST_DIR}/src/sampler DIR_SRC)
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_LIST_DIR}/src DIR_SRC)
LIST(REMOVE_ITEM DIR_SRC ${CMAKE_CURRENT_LIST_DIR}/src/main.cpp)

# build
ADD_LIBRARY(${MAIN_LIB} ${DIR_SRC})
ADD_EXECUTABLE(${MAIN_BIN} ${DIR_SRC})

TARGET_LINK_LIBRARIES(${MAIN_BIN} ${MAIN_LIB})